--- a/src/src/app/cadastro/cad-pessoa/cad-pessoa/cad-pessoa.html
+++ b/src/src/app/cadastro/cad-pessoa/cad-pessoa/cad-pessoa.html
@@ -1,4 +1,4 @@
-<div class="bg-gray-100 flex items-center justify-center min-h-screen p-4 sm:p-6 lg:p-8">
+<div class="bg-gray-100 flex items-center justify-center min-h-screen p-6 sm:p-6 lg:p-8">
   <div class="w-full max-w-4xl mx-auto bg-white p-8 rounded-2xl shadow-lg">
     <h2 class="text-2xl font-bold text-gray-800 mb-2">Cadastro de Novas Pessoas</h2>
     <p class="text-gray-600 mb-8">Preencha os campos abaixo para registrar um nova pessoa.</p>
@@ -120,39 +120,53 @@
               <p *ngIf="pessoaForm.get('nomeFantasia')?.errors?.['required'] && isInvalid('nomeFantasia')" class="mt-1 text-xs text-red-600">O Nome Fantasia é obrigatório.</p>
             </div>
           </div>
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-2">
-        <div class="md:col-span-2">
-        </div>
-        <br>
+          <div class="grid grid-cols-1 md:grid-cols-2 gap-2">
+              <div class="md:col-span-2"></div>
+              <br>
 
-        <div class="md:col-span-2">
-        <legend class="text-lg font-semibold text-indigo-700 border-b border-indigo-200 w-full pb-2 mb-6">Contato (Telefone, whatsapp, email) </legend>
-        </div>
-        <div class="md:col-span-2">
-                <button
-                  type="button"
-                  name="tipo"
-                 class="w-full flex justify-center py-2  border border-transparent shadow-sm text-base font-medium rounded-md text-white bg-indigo-500 hover:bg-indigo-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 disabled:bg-gray-400 "
-                >
-                  +Contatos
-                </button>
+              <div class="md:col-span-2">
+                 <legend class="text-lg font-semibold text-indigo-700 border-b border-indigo-200 w-full pb-2 mb-6">Contato (Telefone, whatsapp, email) </legend>
+              </div>
 
+              <div class="md:col-span-2">
+                      <button
+                       (click)="openModal()"
+                        type="button"
+                        name="tipo"
+                      class="w-full flex justify-center py-2  border border-transparent shadow-sm text-base font-medium rounded-md text-white bg-indigo-500 hover:bg-indigo-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 disabled:bg-gray-400 "
+                      >
+                        +Contatos
+                      </button>
 
-        </div>
+              </div>
 
-</div>
-
+          </div>
+            <div class="relative">
+              <span class="absolute inset-y-0 left-0 flex items-center pl-3">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-4 h-4 text-slate-600">
+                  <path fill-rule="evenodd" d="M1.5 4.5a3 3 0 0 1 3-3h1.372c.86 0 1.61.586 1.819 1.42l1.105 4.423a1.875 1.875 0 0 1-.694 1.955l-1.293.97c-.135.101-.164.249-.126.352a11.285 11.285 0 0 0 6.697 6.697c.103.038.25.009.352-.126l.97-1.293a1.875 1.875 0 0 1 1.955-.694l4.423 1.105c.834.209 1.42.959 1.42 1.82V19.5a3 3 0 0 1-3 3h-2.25C8.552 22.5 1.5 15.448 1.5 6.75V4.5Z" clip-rule="evenodd" />
+                </svg>
+              </span>
+              <input
+                id="contactNumber"
+                class="w-full bg-transparent placeholder:text-slate-400 text-slate-700 text-sm border border-slate-200 rounded-md pr-3 pl-10 py-2 transition duration-300 ease focus:outline-none focus:border-slate-400 hover:border-slate-300 shadow-sm focus:shadow"
+                placeholder="(99) 99999-9999"
+                pattern="^\+\d{1,3}\s\d{1,3}-\d{3}-\d{4}$"
+                title="Phone number must be in the format: +1 123-456-7890"
+                maxlength="16"
+                required
+              />
+            </div>
 
      </fieldset>
+     <fieldset>
 
-      <fieldset>
-
-          <br>
-        <div formGroupName="endereco" class="grid grid-cols-1 md:grid-cols-4 gap-1">
+       <br>
+       <div formGroupName="endereco" class="grid grid-cols-1 md:grid-cols-4 gap-1">
           <div class="md:col-span-4">
           <legend class="text-lg font-semibold text-indigo-700 border-b border-indigo-200 w-full pb-2 mb-6">Endereço completo</legend>
           </div>
-        <div class="md:col-span-2  ">
+          <div class="md:col-span-2 ">
             <label for="cep" class="block text-sm font-medium text-gray-700">CEP</label>
             <input
                   id="cep"
@@ -163,17 +177,17 @@
                   maxlength="9"
                   class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500"
                 />
-          <div *ngIf="loading" class="mt-1 text-blue-500 text-sm">Buscando endereço...</div>
-          <div *ngIf="erroBusca" class="mt-1 text-red-500 text-sm">
-            CEP inválido ou não encontrado. Verifique o número.
-          </div>
-          <div *ngIf="enderecoForm.get('cep')?.errors && enderecoForm.get('cep')?.touched" class="mt-1 text-red-500 text-sm">
-            <span *ngIf="enderecoForm.get('cep')?.errors?.['required']">Obrigatório.</span>
-            <span *ngIf="enderecoForm.get('cep')?.errors?.['pattern']">Formato inválido. Use 8 dígitos.</span>
-          </div>
+              <div *ngIf="loading" class="mt-1 text-blue-500 text-sm">Buscando endereço...</div>
+              <div *ngIf="erroBusca" class="mt-1 text-red-500 text-sm">
+                CEP inválido ou não encontrado. Verifique o número.
+              </div>
+              <div *ngIf="enderecoForm.get('cep')?.errors && enderecoForm.get('cep')?.touched" class="mt-1 text-red-500 text-sm">
+                <span *ngIf="enderecoForm.get('cep')?.errors?.['required']">Obrigatório.</span>
+                <span *ngIf="enderecoForm.get('cep')?.errors?.['pattern']">Formato inválido. Use 8 dígitos.</span>
+              </div>
           </div>
 
-        <div class="md:col-span-4">
+          <div class="md:col-span-4">
           <div>
             <label for="logradouro" class="block text-sm font-medium text-gray-700">Rua/Logradouro</label>
             <input
@@ -199,22 +213,31 @@
               </div>
           </div>
 
-        <div class="md:col-span-3">
-            <label for="bairro" class="block text-sm font-medium text-gray-700">Bairro</label>
-            <input
-              id="bairro"
-              type="text"
-              formControlName="bairro"
-              class="mt-1 block w-full px-3 py-2 bg-gray-100 border border-gray-300 rounded-md shadow-sm cursor-not-allowed"
-              readonly
-            />
+          <div class="md:col-span-3">
+             <label for="complemento" class="block text-sm font-medium text-gray-700">Complemento (opcional)</label>
+             <input
+                id="complemento"
+                type="text"
+                formControlName="complemento"
+                class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500"
+              />
           </div>
 
 
 
-          <div class="md:col-span-3">
-
+          <div class="md:col-span-2">
             <div>
+              <label for="bairro" class="block text-sm font-medium text-gray-700">Bairro</label>
+                <input
+                  id="bairro"
+                  type="text"
+                  formControlName="bairro"
+                  class="mt-1 block w-full px-3 py-2 bg-gray-100 border border-gray-300 rounded-md shadow-sm cursor-not-allowed"
+                  readonly
+                />
+            </div>
+          </div>
+          <div class="md:col-span-2">
               <label for="cidade" class="block text-sm font-medium text-gray-700">Cidade</label>
               <input
                 id="cidade"
@@ -223,37 +246,20 @@
                 class="mt-1 block w-full px-3 py-2 bg-gray-100 border border-gray-300 rounded-md shadow-sm cursor-not-allowed"
                 readonly
               />
-            </div>
-          </div>
-          <div >
-            <label for="uf" class="block text-sm font-medium text-gray-700">UF</label>
-            <input
-              id="uf"
-              type="text"
-              formControlName="uf"
-              class="mt-1 block w-full px-3 py-2 bg-gray-100 border border-gray-300 rounded-md shadow-sm cursor-not-allowed"
-              readonly
-            />
-          </div>
-          </div>
-
-
-
-          <div class="md:col-span-4">
-
-
-            <div>
-              <label for="complemento" class="block text-sm font-medium text-gray-700">Complemento (opcional)</label>
+           </div>
+           <div class=" w-16">
+              <label for="uf" class="block text-sm font-medium text-gray-700">UF</label>
               <input
-                id="complemento"
+                id="uf"
                 type="text"
-                formControlName="complemento"
-                class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500"
+                formControlName="uf"
+                class="mt-1 block w-full px-3 py-2 bg-gray-100 border border-gray-300 rounded-md shadow-sm cursor-not-allowed"
+                readonly
               />
-            </div>
           </div>
-</fieldset>
-          <div class="pt-4">
+      </div>
+      </fieldset>
+      <div class="pt-4">
             <button type="submit"
               [disabled]="pessoaForm.invalid"
               class="w-full flex justify-center py-3 px-6 border border-transparent shadow-sm text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 disabled:bg-gray-400 disabled:cursor-not-allowed"
@@ -264,13 +270,8 @@
             >
               Finalizar Cadastro
             </button>
-          </div>
-
-
-
-            <div class="mt-10 flex justify-end"> </div>
-
-
+      </div>
+      <div class="mt-10 flex justify-end"> </div>
     </form>
   </div>
 </div>
