--- a/src/src/app/template/layout/layout.html
+++ b/src/src/app/template/layout/layout.html
@@ -1,5 +1,5 @@
 
-<header class="bg-gradient-to-r from-blue-500 to-blue-700 text-white p-6 shadow-lg">
+<header class="fixed top-0 left-0 w-full bg-white shadow-md z-10 p-4 bg-gradient-to-r from-blue-500 to-blue-700 text-white p-6 shadow-lg">
                <h1> <a class="text-8x1 font-bold"  routerLink="/principal">
                         GLOC - GESTÃO DE LOCAÇÃO
                   </a>
@@ -41,13 +41,13 @@
     </nav>
 </header>
 
-      <div class="mx-auto max-w-xl">
+      <div class="container mx-auto  z-10 p-80 pt-43">
          <router-outlet></router-outlet>
       </div>
 
 
 
- <footer class="bg-gray-200 text-center  mt-6">
+ <footer class=" bg-gray-200 text-center fixed bottom-0 left-0 w-full">
     <p class="text-gray-600 text-sn">2025 - GLOC - Gestão de Locação. Tosdos os direitos reservados.</p>
  </footer>
 
