--- a/src/app/cadastro/cad-pessoa/cad-pessoa/cad-pessoa.html
+++ b/src/app/cadastro/cad-pessoa/cad-pessoa/cad-pessoa.html
@@ -1,7 +1,7 @@
 <div class="bg-gray-100 flex items-center justify-center min-h-screen p-6 sm:p-6 lg:p-8">
   <div class="w-full max-w-4xl mx-auto bg-white p-8 rounded-2xl shadow-lg">
     <h2 class="text-2xl font-bold text-gray-800 mb-2">Cadastro de Novas Pessoas</h2>
-    <p class="text-gray-600 mb-8">Preencha os campos abaixo para registrar um nova pessoa.</p>
+    <p class="text-gray-600 mb-8">Preencha os campos abaixo para registrar uma nova pessoa.</p>
     <form [formGroup]="pessoaForm" (ngSubmit)="onSubmit()" >
 
       <fieldset class="mb-8">
