--- a/src/app/cadastro/cad-pessoa/cad-pessoa/cad-pessoa.html
+++ b/src/app/cadastro/cad-pessoa/cad-pessoa/cad-pessoa.html
@@ -1,5 +1,5 @@
-<div class="bg-gray-100 flex items-center justify-center min-h-screen p-6 sm:p-6 lg:p-8">
-  <div class="w-full max-w-4xl mx-auto bg-white p-8 rounded-2xl shadow-lg">
+<div class="bg-gray-100 flex items-center justify-center min-h-screen p-6 sm:p-6 lg:p-6">
+  <div class="w-full max-w-4x2 mx-auto bg-white p-5 rounded-2xl shadow-lg">
     <h2 class="text-2xl font-bold text-gray-800 mb-2">Cadastro de Novas Pessoas</h2>
     <p class="text-gray-600 mb-8">Preencha os campos abaixo para registrar uma nova pessoa.</p>
     <form [formGroup]="pessoaForm" (ngSubmit)="onSubmit()" >
@@ -46,7 +46,7 @@
             </div>
             <div>
               <label for="cpf" class="block text-sm font-medium text-gray-700">CPF <span class="text-red-500">*</span></label>
-              <input id="cpf" type="text" formControlName="cpf" placeholder="000.000.000-00"
+              <input id="cpf" type="text" formControlName="cpf" inputmode="numeric"  mask="000.000.000-00" placeholder="000.000.000-00" type="text"
                 class="mt-1 block w-full border rounded-md shadow-sm p-3 focus:ring-blue-500 focus:border-blue-500 text-gray-900"
                 [ngClass]="{'border-red-500': isInvalid('cpf'), 'border-gray-300': !isInvalid('cpf')}"
               >
@@ -65,24 +65,25 @@
             </div>
             <div>
 
-               <label for="cpf" class="block text-sm font-medium text-gray-700">RG<span class="text-red-500">*</span></label>
-              <input id="cpf" type="text" formControlName="cpf" placeholder="000.000.000-00"
+               <label for="cpf" class="block text-sm font-medium text-gray-700">RG<span class="text-red-500"></span></label>
+              <input id="cpf" type="text" formControlName="rg"  inputmode="numeric"  mask="00.000.000-00"  placeholder="00.000.000-00" type="text"
                 class="mt-1 block w-full border rounded-md shadow-sm p-3 focus:ring-blue-500 focus:border-blue-500 text-gray-900"
-                [ngClass]="{'border-red-500': isInvalid('cpf'), 'border-gray-300': !isInvalid('cpf')}"
+
               >
             </div>
              <div>
-              <label for="nome" class="block text-sm font-medium text-gray-700">Orgão Emissor <span class="text-red-500">*</span></label>
-              <input id="nome" type="text" formControlName="nome" placeholder="Ex.: SSP - SP"
+              <label for="nome" class="block text-sm font-medium text-gray-700">Orgão Emissor <span class="text-red-500"></span></label>
+              <input id="nome" type="text" formControlName="orgEmis" placeholder="Ex.: SSP - SP"    type="text"
                 class="mt-1 block w-full border rounded-md shadow-sm p-3 focus:ring-blue-500 focus:border-blue-500 text-gray-900"
-                [ngClass]="{'border-red-500': isInvalid('nome'), 'border-gray-300': !isInvalid('nome')}"
+
               >
               </div>
               <div>
-              <label for="nome" class="block text-sm font-medium text-gray-700">Data expedição <span class="text-red-500">*</span></label>
-              <input id="nome" type="text" formControlName="nome" placeholder="99/99/9999"
+              <label for="nome" class="block text-sm font-medium text-gray-700">Data expedição <span class="text-red-500"></span></label>
+              <input id="nome" type="text" formControlName="dtEmis" placeholder="99/99/9999" inputmode="date"
+                  mask="99/99/9999"
                 class="mt-1 block w-full border rounded-md shadow-sm p-3 focus:ring-blue-500 focus:border-blue-500 text-gray-900"
-                [ngClass]="{'border-red-500': isInvalid('nome'), 'border-gray-300': !isInvalid('nome')}"
+
               >
               </div>
 
@@ -93,7 +94,8 @@
             </div>
             <div>
               <label for="cnpj" class="block text-sm font-medium text-gray-700">CNPJ <span class="text-red-500">*</span></label>
-              <input id="cnpj" type="text" formControlName="cnpj" placeholder="00.000.000/0000-00"
+              <input id="cnpj" type="text" formControlName="cnpj"  inputmode="numeric" mask="00.000.000/0000-00" placeholder="00.000.000/0000-00"
+                 type="text"
                 class="mt-1 block w-full border rounded-md shadow-sm p-3 focus:ring-blue-500 focus:border-blue-500 text-gray-900"
                 [ngClass]="{'border-red-500': isInvalid('cnpj'), 'border-gray-300': !isInvalid('cnpj')}"
               >
@@ -140,23 +142,8 @@
 
               </div>
 
-          </div>
-            <div class="relative">
-              <span class="absolute inset-y-0 left-0 flex items-center pl-3">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-4 h-4 text-slate-600">
-                  <path fill-rule="evenodd" d="M1.5 4.5a3 3 0 0 1 3-3h1.372c.86 0 1.61.586 1.819 1.42l1.105 4.423a1.875 1.875 0 0 1-.694 1.955l-1.293.97c-.135.101-.164.249-.126.352a11.285 11.285 0 0 0 6.697 6.697c.103.038.25.009.352-.126l.97-1.293a1.875 1.875 0 0 1 1.955-.694l4.423 1.105c.834.209 1.42.959 1.42 1.82V19.5a3 3 0 0 1-3 3h-2.25C8.552 22.5 1.5 15.448 1.5 6.75V4.5Z" clip-rule="evenodd" />
-                </svg>
-              </span>
-              <input
-                id="contactNumber"
-                class="w-full bg-transparent placeholder:text-slate-400 text-slate-700 text-sm border border-slate-200 rounded-md pr-3 pl-10 py-2 transition duration-300 ease focus:outline-none focus:border-slate-400 hover:border-slate-300 shadow-sm focus:shadow"
-                placeholder="(99) 99999-9999"
-                pattern="^\+\d{1,3}\s\d{1,3}-\d{3}-\d{4}$"
-                title="Phone number must be in the format: +1 123-456-7890"
-                maxlength="16"
-                required
-              />
             </div>
+
 
      </fieldset>
      <fieldset>
@@ -166,16 +153,19 @@
           <div class="md:col-span-4">
           <legend class="text-lg font-semibold text-indigo-700 border-b border-indigo-200 w-full pb-2 mb-6">Endereço completo</legend>
           </div>
-          <div class="md:col-span-2 ">
-            <label for="cep" class="block text-sm font-medium text-gray-700">CEP</label>
+          <div class="md:col-span-2 w-[120px] ">
+            <label for="cep" class="block  text-sm font-medium text-gray-700">CEP</label>
             <input
                   id="cep"
                   type="text"
                   formControlName="cep"
                   (blur)="buscarCep()"
-                  placeholder="CEP (Ex: 01001-000)"
-                  maxlength="9"
-                  class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500"
+                  placeholder="Pesquisar"
+                  inputmode="numeric"
+                  mask="00.000-000"
+
+                  maxlength="16"
+                  class="w-full bg-transparent placeholder:text-slate-500 text-slate-700 text-lg border border-slate-200 rounded-md pr-3 pl-2 py-2 transition duration-300 ease focus:outline-none focus:border-slate-400 hover:border-slate-300 shadow-sm focus:shadow"
                 />
               <div *ngIf="loading" class="mt-1 text-blue-500 text-sm">Buscando endereço...</div>
               <div *ngIf="erroBusca" class="mt-1 text-red-500 text-sm">
