--- a/src/app/cadastro/modal-contato/modal-contato.html
+++ b/src/app/cadastro/modal-contato/modal-contato.html
@@ -1,87 +1,123 @@
 <div >
   <div class="w-full max-w-4xl mx-auto bg-white p-8 rounded-2xl shadow-lg">
-    <h2 class="text-center text-2xl font-bold text-gray-800 mb-2">Lista de contatos</h2>
-    <p class="text-center text-gray-600 mb-8">Selecione contato na lista para exporta.</p>
+    <h2 class="text-center text-2xl font-bold text-gray-800 mb-2">Cadastro de contatos</h2>
+    <p class="text-center text-gray-600 mb-8">Informe os contatos da pessoa.</p>
+
     <form  >
+      <legend class="text-lg font-semibold text-indigo-700 border-b border-indigo-200 w-full mb-3">Contatos</legend>
+        <div class="flex flex-col sm:flex-row sm:space-x-4">
+          <div class="flex-1">
 
-      <fieldset >
+              <label for="logradouro" class="block text-sm font-medium text-gray-700">Telefone</label>
+              <div class="relative  w-[185px]">
 
-        <legend class="text-lg font-semibold text-indigo-700 border-b border-indigo-200 w-full pb-2 mb-6">Contatos</legend>
+                <span class="absolute inset-y-0 left-0 flex items-center pl-4">
+                  <svg xmlns="http://www.w3.org/2000/svg  text-blue-700" viewBox="0 0 24 24" fill="currentColor" class="w-4 h-4 text-slate-600">
+                    <path fill-rule="evenodd" d="M1.5 4.5a3 3 0 0 1 3-3h1.372c.86 0 1.61.586 1.819 1.42l1.105 4.423a1.875 1.875 0 0 1-.694 1.955l-1.293.97c-.135.101-.164.249-.126.352a11.285 11.285 0 0 0 6.697 6.697c.103.038.25.009.352-.126l.97-1.293a1.875 1.875 0 0 1 1.955-.694l4.423 1.105c.834.209 1.42.959 1.42 1.82V19.5a3 3 0 0 1-3 3h-2.25C8.552 22.5 1.5 15.448 1.5 6.75V4.5Z" clip-rule="evenodd" />
+                  </svg>
+                </span>
+                <input
+                  id="contactNumber"
+                  class="w-full bg-transparent placeholder:text-slate-400 text-slate-700 text-sm border border-slate-200 rounded-md pr-3 pl-9 py-2 transition duration-300 ease focus:outline-none focus:border-slate-400 hover:border-slate-300 shadow-sm focus:shadow"
+                  placeholder="+55 (99) 99999-9999"
+                  inputmode="numeric"
+                  mask="(00) 0 0000 0000"
+                  prefix="+55 "
+                  pattern="^\+\d{1,3}\s\d{1,3}-\d{3}-\d{4}$"
+                  title="Phone number must be in the format: (99) 99999-9999"
+                  maxlength="20"
+                 />
+              </div>
+              <br>
+               <div >
+                <label for="logradouro" class="block text-sm font-medium sm:space-x-50 text-gray-700">Celular</label>
+                <div class="relative w-[185px]"  >
+                <span class="absolute inset-y-0 left-0 flex items-center pl-3">
+                  <svg class="size-6 text-blue-500 text-blue-700" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M7 3H17C17.5523 3 18 3.44772 18 4V20C18 20.5523 17.5523 21 17 21H7C6.44772 21 6 20.5523 6 20V4C6 3.44772 6.44772 3 7 3Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                      <path d="M10 17H14" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                      <path d="M12 6V6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>
+                </span>
+                <input
+                  id="contactNumber"
+                  class="w-full bg-transparent placeholder:text-slate-400 text-slate-700 text-sm border border-slate-200 rounded-md pr-3 pl-9 py-2 transition duration-300 ease focus:outline-none focus:border-slate-400 hover:border-slate-300 shadow-sm focus:shadow"
+                                    placeholder="+55 (99) 99999-9999"
+                  inputmode="numeric"
+                  mask="(00) 0 0000 0000"
+                  prefix="+55 "
+                  pattern="^\+\d{1,3}\s\d{1,3}-\d{3}-\d{4}$"
+                  title="Phone number must be in the format: (99) 99999-9999"
+                  maxlength="20"
 
-<div
-     class=" bg-gray-500 bg-opacity-75 z-10 flex items-center justify-center">
-
-    <div class="bg-white rounded-lg  shadow-2xl w-full max-w-4xl max-h-[40vh] flex flex-col">
-
-        <div class="flex-grow overflow-y-auto ">
-
-            <div>
-                <table  class=" text-sm text-gray-500">
-                    <thead class="text-xs text-gray-700 uppercase bg-gray-100">
-                        <tr>
-                            <th scope="col" class="p-4">
-                                <input type="checkbox"
-                                       [checked]="isAllSelectedOnCurrentPage"
-                                       (change)="toggleSelectAll()"
-                                       class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500">
-                            </th>
-                            <th scope="col" class="px-6 py-3">Telefone</th>
-                            <th scope="col" class="px-6 py-3">WhatsApp</th>
-                            <th scope="col" class="px-6 py-3">Email</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                       <tr *ngFor="let contact of paginatedContacts"
-                            class="bg-white border-b hover:bg-blue-50/50 transition"
-                           [class.bg-blue-50]="isSelected(contact.id)"> <td class="w-4 p-4">
-                                <input type="checkbox"
-                                       [checked]="isSelected(contact.id)"
-                                       (change)="toggleSelection(contact.id)"
-                                       class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500">
-                            </td>
-
-
-                            <td class="px-6 py-4">{{ contact.phone }}</td>
-                            <td class="px-6 py-4">
-                                <span [ngClass]="{'text-green-600 font-semibold': contact.whatsapp, 'text-red-500': !contact.whatsapp}">
-                                    {{ contact.whatsapp ? 'Sim' : 'Não' }}
-                                </span>
-                            </td>
-                            <td class="px-6 py-4">{{ contact.email }}</td>
-                        </tr>
-                    </tbody>
-                </table>
-
-<div class="p-5 border-t border-gray-200 flex justify-between items-center bg-gray-50">
-
-            <button (click)="confirmSelection()"
-                    [disabled]="selectedContactIds.length === 0"
-                    class="px-4 py-2 text-sm font-semibold rounded-lg transition"
-                    [ngClass]="{
-                        'bg-blue-600 text-white hover:bg-blue-700': selectedContactIds.length > 0,
-                        'bg-gray-400 text-gray-200 cursor-not-allowed': selectedContactIds.length === 0
-                    }">
-                Confirmar Seleção ({{ selectedContactIds.length }})
-            </button>
-
-            <nav class="flex items-center space-x-2">
-                </nav>
-        </div>
-
+                />
             </div>
-
-        </div>
-
-
-
-
-
-
          </div>
-        </div>
-      </fieldset>
+         </div>
+         <div class="relative  w-[185px]">
+                <label for="logradouro" class="block text-sm font-medium text-gray-700">WhatsApp</label>
+                <div class="relative">
+                <span class="absolute inset-y-0 left-0 flex items-center pl-3">
+                  <svg class="size-6 text-emerald-600" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M12.0001 2C6.47117 2 2.00003 6.47114 2.00003 12.0001C2.00003 14.1561 2.69463 16.2163 3.97495 17.9174L2.37894 22.0152L6.68596 20.3582C8.36128 21.2985 10.1691 21.7891 12.0001 21.7891H12.0003C17.5292 21.7891 22 17.318 22 12.0001C22 6.47114 17.5292 2 12.0001 2Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
 
-      <div class="mt-10 flex justify-end"> </div>
+                      <path d="M10.2248 10.2185C10.2248 10.2185 10.1666 10.1603 10.2248 10.2185Z" fill="none"/>
+                      <path d="M10.2248 10.2185C10.2248 10.2185 10.1666 10.1603 10.2248 10.2185Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                      <path d="M13.7745 13.7758C13.7745 13.7758 13.7163 13.7176 13.7745 13.7758Z" fill="none"/>
+                      <path d="M13.7745 13.7758C13.7745 13.7758 13.7163 13.7176 13.7745 13.7758Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                      <path d="M14.5057 15.2289C14.5057 15.2289 14.4475 15.1707 14.5057 15.2289Z" fill="none"/>
+                      <path d="M14.5057 15.2289C14.5057 15.2289 14.4475 15.1707 14.5057 15.2289Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+
+                    </svg>
+                </span>
+                <input
+                  id="contactNumber"
+                  class="w-full bg-transparent placeholder:text-slate-400 text-slate-700 text-sm border border-slate-200 rounded-md pr-3 pl-9 py-2 transition duration-300 ease focus:outline-none focus:border-slate-400 hover:border-slate-300 shadow-sm focus:shadow"
+                                    placeholder="+55 (99) 99999-9999"
+                  inputmode="numeric"
+                  mask="(00) 0 0000 0000"
+                  prefix="+55 "
+                  pattern="^\+\d{1,3}\s\d{1,3}-\d{3}-\d{4}$"
+                  title="Phone number must be in the format: (99) 99999-9999"
+                  maxlength="20"
+
+                />
+            </div>
+         </div>
+
+       </div>
+       <br>
+       <label for="logradouro" class="block text-sm font-medium text-gray-700">Email</label>
+       <div class="relative">
+           <span class="absolute inset-y-0 left-0 flex items-center pl-3">
+
+              <svg class="size-4 sm:size-6 text-blue-500" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <rect x="3" y="5" width="18" height="14" rx="2" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M3 5L12 12L21 5" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+        </span>
+         <input
+                  id="contactNumber"
+                  class="w-full bg-transparent placeholder:text-slate-400 text-slate-700 text-sm border border-slate-200 rounded-md pr-3 pl-10 py-2 transition duration-300 ease focus:outline-none focus:border-slate-400 hover:border-slate-300 shadow-sm focus:shadow"
+                  placeholder="exemplo@exemplo.com"
+                  pattern="^\+\d{1,3}\s\d{1,3}-\d{3}-\d{4}$"
+                  title="Phone number must be in the format: (99) 99999-9999"
+                  maxlength="60"
+
+                />
+
+        </div>
+
+        <div class="pt-6">
+            <button type="submit"
+
+              class="w-full flex justify-center py-3 px-6 border border-transparent shadow-sm text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 disabled:bg-gray-400 disabled:cursor-not-allowed"
+
+            >
+           Adicionar ao Cadastro
+            </button>
+      </div>
+
     </form>
   </div>
 </div>
