--- a/src/app/template/layout/layout.html
+++ b/src/app/template/layout/layout.html
@@ -1,13 +1,13 @@
 
-<header class="fixed top-0 left-0 w-full bg-white shadow-md z-10 p-4 bg-gradient-to-r from-blue-500 to-blue-700 text-white p-6 shadow-lg">
-               <h1> <a class="text-8x1 font-bold"  routerLink="/principal">
-                        GLOC - GESTÃO DE LOCAÇÃO
+<header class="fixed top-0 left-0 w-full bg-white shadow-md p-2 bg-gradient-to-r from-blue-500 to-blue-700 text-white p-0 shadow-lg">
+
+
+    <div class=" text-center  ">
+  <h1> <a class="text-8x1 fixed top-0 left-2 font-bold"  routerLink="/principal">
+                        GLOC - Gestão de Locações
                   </a>
                </h1>
-
-    <div class="text-center">
-
-        <h1 class="text-lg mt-2 font-bold">{{ props.titulo }}</h1>
+        <h1 class=" text-lg mt-0 font-bold">{{ props.titulo }}</h1>
         <p class="text-lg mt-2">{{ props.subTitulo }}</p>
     </div>
 
@@ -16,7 +16,7 @@
     </div>
 
 
-    <nav class="mt-4'">
+    <nav class="mt-4">
         <ul class="flex justify-center space-x-6 text-white font-semibold">
             <li>
                 <a class="hover:text-yellow-300">Dashboard</a>
@@ -41,7 +41,7 @@
     </nav>
 </header>
 
-      <div class="container mx-auto  z-10 p-80 pt-43">
+      <div class="container mx-auto  z-2 p-80 pt-38">
          <router-outlet></router-outlet>
       </div>
 
