--- a/src/app/cadastro/cad-pessoa/cad-pessoa/cad-pessoa.scss
+++ b/src/app/cadastro/cad-pessoa/cad-pessoa/cad-pessoa.scss
@@ -7,3 +7,23 @@ dialog {
     backdrop-filter: blur(1px);
   }
 }
+
+
+
+/* Exemplo de CSS básico para a tabela */
+.data-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+
+.data-table th, .data-table td {
+    border: 1px solid #ccc;
+    padding: 10px;
+    text-align: left;
+}
+
+.data-table th {
+    background-color: #f2f2f2;
+    font-weight: bold;
+}
