--- a/src/app/cadastro/modal-contato/modal-contato.html
+++ b/src/app/cadastro/modal-contato/modal-contato.html
@@ -3,7 +3,7 @@
     <h2 class="text-center text-2xl font-bold text-gray-800 mb-2">Cadastro de contatos</h2>
     <p class="text-center text-gray-600 mb-8">Informe os contatos da pessoa.</p>
 
-    <form  >
+
       <legend class="text-lg font-semibold text-indigo-700 border-b border-indigo-200 w-full mb-3">Contatos</legend>
         <div class="flex flex-col sm:flex-row sm:space-x-4">
           <div class="flex-1">
@@ -26,6 +26,7 @@
                   pattern="^\+\d{1,3}\s\d{1,3}-\d{3}-\d{4}$"
                   title="Phone number must be in the format: (99) 99999-9999"
                   maxlength="20"
+                   [(ngModel)]="telefone"
                  />
               </div>
               <br>
@@ -49,7 +50,7 @@
                   pattern="^\+\d{1,3}\s\d{1,3}-\d{3}-\d{4}$"
                   title="Phone number must be in the format: (99) 99999-9999"
                   maxlength="20"
-
+                   [(ngModel)]="celular"
                 />
             </div>
          </div>
@@ -80,6 +81,7 @@
                   pattern="^\+\d{1,3}\s\d{1,3}-\d{3}-\d{4}$"
                   title="Phone number must be in the format: (99) 99999-9999"
                   maxlength="20"
+                  [(ngModel)]="whatsapp"
 
                 />
             </div>
@@ -97,28 +99,24 @@
             </svg>
         </span>
          <input
-                  id="contactNumber"
+                  id="email"
                   class="w-full bg-transparent placeholder:text-slate-400 text-slate-700 text-sm border border-slate-200 rounded-md pr-3 pl-10 py-2 transition duration-300 ease focus:outline-none focus:border-slate-400 hover:border-slate-300 shadow-sm focus:shadow"
                   placeholder="exemplo@exemplo.com"
                   pattern="^\+\d{1,3}\s\d{1,3}-\d{3}-\d{4}$"
                   title="Phone number must be in the format: (99) 99999-9999"
                   maxlength="60"
-
+                  [(ngModel)]="email"
                 />
 
         </div>
-
         <div class="pt-6">
             <button type="submit"
-
               class="w-full flex justify-center py-3 px-6 border border-transparent shadow-sm text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 disabled:bg-gray-400 disabled:cursor-not-allowed"
-
+              (click)="submitData()"
             >
            Adicionar ao Cadastro
             </button>
       </div>
-
-    </form>
   </div>
 </div>
 
