--- a/src/app/cadastro/cad-pessoa/cad-pessoa/cad-pessoa.scss
+++ b/src/app/cadastro/cad-pessoa/cad-pessoa/cad-pessoa.scss
@@ -1,5 +1,14 @@
 
+.alerta-erro {
+    /* Cor de fundo vermelha clara */
 
+    /* Cor do texto vermelho escuro */
+    color: #cc0000;
+    padding: 1px;
+    margin-bottom: 5px;
+    font-weight: bold;
+    font-size: 12px;
+}
 
 
 /* Exemplo de CSS básico para a tabela */
