--- a/src/app/template/layout/layout.html
+++ b/src/app/template/layout/layout.html
@@ -3,26 +3,26 @@
 
 
     <div class=" text-center  ">
-  <h1> <a class="text-8x1 fixed top-0 left-2 font-bold"  routerLink="/principal">
+    <h1> <a class="text-8x1 fixed top-0 left-2 font-bold"  routerLink="/principal" >
                         GLOC - Gestão de Locações
-                  </a>
-               </h1>
-        <h1 class=" text-lg mt-0 font-bold">{{ props.titulo }}</h1>
-        <p class="text-lg mt-2">{{ props.subTitulo }}</p>
+        </a>
+    </h1>
+            <h1 class="text-2xl font-bold">{{ props.titulo }}</h1>
+            <p class="text-1xl ">{{ props.subTitulo }}</p>
     </div>
 
-    <div class="mt-4">
+    <div class="mt-0">
         <hr class="border-t border-blue-300 opacity-50" />
     </div>
 
 
-    <nav class="mt-4">
-        <ul class="flex justify-center space-x-6 text-white font-semibold">
+    <nav class="mt-0">
+        <ul class="flex justify-center space-x-8 text-white font-semibold">
             <li>
                 <a class="hover:text-yellow-300">Dashboard</a>
             </li>
             <li>
-                <a  routerLink="menuconsultar" class="hover:text-yellow-300">Consultar</a>
+                <a  routerLink="menuconsultar" class="hover:text-yellow-500">Consultar</a>
             </li>
             <li>
                 <a routerLink="menucadastrar" class="hover:text-yellow-300">Cadastrar</a>
@@ -41,7 +41,7 @@
     </nav>
 </header>
 
-      <div class="container mx-auto  z-2 p-80 pt-38">
+      <div class="container mx-auto  z-0 p-70 pt-23">
          <router-outlet></router-outlet>
       </div>
 
